[feat] add notification emitter for the user -booking function
