# controllers/user-booking.js
@@ -6,6 +6,8 @@ const { QueryTypes } = require('sequelize')
 
 const v = new Validator
 
+const notification = require('../utils/notification');
+
 module.exports = {
     order: async (req, res, next) => {
 
@@ -66,6 +68,9 @@ module.exports = {
                                 a++
                             }
                         }
+
+                        // emit notification when booking
+                        notification.booking(req.user.id, addBooking.id);
 
                         return res.status(200).json({
                             status: true,
