# routes/index.js
@@ -14,7 +14,8 @@ const name = require('../lib/enum');
 const airport = require('./airport');
 const booking = require('./booking');
 const user = require('./user-profile');
-const userBooking = require('./user-booking')
+const userBooking = require('./user-booking');
+const notification = require('./notification');
 
 // for the checker for hello world
 router.get('/', controller.hello);
@@ -32,8 +33,10 @@ router.use('/airport', airport);
 router.use('/booking', booking);
 // user profiles routes
 router.use('/user', user);
-
-router.use('/userBooking', userBooking)
+// notification routes 
+router.use('/notification', notification);
+// user booking routes
+router.use('/booking', userBooking);
 
 // example on how to use the RBAC
 // below is gonna be true
